# neuro-classifier

./: .env.example.txt  .gitignore.txt  README.md  pyproject.toml  requirements.txt
data/: EPSP-17-59-7_IO3_100.csv  EPSP-18-44-8_IO3_100_2.csv  PS-17-59-7_IO3_100.csv  PS-18-44-8_IO3_100_2.csv
experiments/: grid_search_results.csv  grid_search_results_sorted.csv
experiments/cnn_bilstm_lr0.0003_bs16_do0.2/: report.txt  results.json
experiments/cnn_bilstm_lr0.0003_bs16_do0.4/: report.txt  results.json
experiments/cnn_bilstm_lr0.0003_bs32_do0.2/: report.txt  results.json
experiments/cnn_bilstm_lr0.0003_bs32_do0.4/: report.txt  results.json
experiments/cnn_bilstm_lr0.001_bs16_do0.2/: results.json
experiments/cnn_bilstm_lr0.001_bs16_do0.4/: model_meta.json  results.json
experiments/cnn_bilstm_lr0.001_bs32_do0.2/: report.txt  results.json
experiments/cnn_bilstm_lr0.001_bs32_do0.4/: results.json
experiments/cnn_deeper_lr0.0003_bs16_do0.2/: results.json
experiments/cnn_deeper_lr0.0003_bs16_do0.4/: report.txt  results.json
experiments/cnn_deeper_lr0.0003_bs32_do0.2/: report.txt  results.json
experiments/cnn_deeper_lr0.0003_bs32_do0.4/: report.txt  results.json
experiments/cnn_deeper_lr0.001_bs16_do0.2/: results.json
experiments/cnn_deeper_lr0.001_bs16_do0.4/: report.txt  results.json
models/: cnn_bilstm.keras  cnn_bilstm_meta.json  my_model.keras  my_model_meta.json
models/cnn_deeper_old/: model_report.txt
scripts/: grid_search.py  predict.py  split.py  train.py
src/: config.py  data_loader.py  models.py  predict.py  train.py  utils.py
(+24 files in other folders)
